@@ -1,4 +1,4 @@
-$Header: /data/zender/nco_20150216/nco/doc/TODO,v 1.1256 2013-12-02 20:48:45 zender Exp $
+$Header: /data/zender/nco_20150216/nco/doc/TODO,v 1.1257 2013-12-29 00:01:15 zender Exp $
 
 # Purpose: TODO items for NCO
 
@@ -655,8 +655,9 @@ A. ncflint now always works when input files are interchanged, i.e.,
 nco1102. ncatted handle arrays of NC_STRINGs with embedded delimiters
 	 ncatted -D 5 -O -a new_string_att,att_var,c,sng,"list","of","str,ings" ~/nco/data/in_4.nc ~/foo.nc
 nco1104. ncrename and ncatted copy through API with --hdf4
-nco1106. 
-
+nco1106. autoconvert netCDF4 string variable to netCDF3 nc_char type. requires dummy dimension for NC_CHAR array length
+         ncks -O -G : -g /g11/ -v string_var -3 ~/nco/data/in_grp.nc ~/foo.nc
+nco1107. 
 qrk
 ************************************************************************
 End ncoXXX TODOs
