@@ -1,3 +1,8 @@
+2013-12-28  Charlie Zender  <zender@uci.edu>
+
+	* Refine nco_xtr_grp_mrk() to check that marked groups match
+	beginning/end of path boundaries. nco_xtr_mk() already does this.
+
 2013-12-27  Charlie Zender  <zender@uci.edu>
 
 	* Failed attempt to convert NC_STRING to NC_CHAR variables
